# pioneerxity-web-scrapper-service

./: .gitignore  1. High-Level Design & Base Requirements.md  2. Requirements Specification.md  3. Developer Guidelines.md  4. Implementation Guidelines.md  Makefile  PHASE3_COMPLIANCE_ANALYSIS.md  PHASE3_SUMMARY.md  README.md  TEST_PHASE3_SETUP.md  docker-compose.yml  env.example  pyproject.toml  test_client.py  test_client_phase2.py
browser-use-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
browser-use-service/src/browser_use_service/: __init__.py  agent_runner.py  config.py  llm.py  main.py
browseruse-integration-poc/: 01_requirements_and_user_journey.md  02_architecture_options.md  03_data_contract.md  04_browseruse_service_path_b.md  05_gateway_integration.md  06_client_ui.md  07_runbook.md  README.md
docker/: Dockerfile
proto/: scraper.proto
scripts/: __init__.py  demo_phase3_gateway.py  generate_proto.py  phase3_agent_stub.py  probe_quality.py
src/scraper/: __init__.py  grpc_server.py  http_app.py  http_server.py  lifespan.py  main.py
src/scraper/config/: __init__.py  settings.py
src/scraper/controllers/: __init__.py  scraper_controller.py
src/scraper/domain/: __init__.py  errors.py  models.py
src/scraper/llm/: __init__.py  ollama_adapter.py  openai_adapter.py  runtime.py
src/scraper/models/: __init__.py  database.py  requests.py
src/scraper/observability/: __init__.py  logger.py
src/scraper/processing/: __init__.py  image_handler.py
src/scraper/scraping/: __init__.py  playwright_scraper.py
src/scraper/services/: __init__.py  agent_service.py  content_filter.py  discovery_service.py  document_processor.py  scraper_service.py
tests/unit/: test_content_filter.py  test_discovery_hierarchy.py  test_image_handler.py  test_paths.py  test_quality.py
(+11 files in other folders)
